--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -6,6 +6,7 @@ body
 
 strong
   color: pink
+  font-weight: bold
 
 // site meta
 .brand
@@ -35,6 +36,14 @@ strong
 // post styles
 .post-body
   text-align: left
+  aside
+    background: #F1F1EF
+    padding: 10px 20px
+    border-radius: 5px
+    p
+      padding: 0
+      margin: 0
+
 
 // copyright
 .post-copyright
