add: more posts

--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -36,6 +36,7 @@ strong
 // post styles
 .post-body
   text-align: left
+
   aside
     background: #F1F1EF
     padding: 10px 20px
@@ -44,6 +45,11 @@ strong
       padding: 0
       margin: 0
 
+  figcaption
+    font-weight: normal !important
+    text-align: left !important
+    strong
+      color: #999 !important
 
 // copyright
 .post-copyright
