add: more posts

--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -11,6 +11,7 @@ strong
 
 // site meta
 .site-title
+  font-size: 2.1em
   font-weight: bold
 
 .brand
@@ -42,6 +43,7 @@ strong
 // post styles
 .post-block
   h1.post-title
+    font-size: 2em
     font-weight: bold !important
 
   .post-body
@@ -59,6 +61,7 @@ strong
     code
       color: pink
       background: pinkBg
+      text-decoration: none !important
 
     .highlight
       border-radius: 5px
