add: some book covers

--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -103,3 +103,12 @@ strong
         font-size: 0.8em
         margin-bottom: -5px
         text-decoration: none !important
+
+.book-cover
+  margin: 0 auto
+  width: 40%
+  img
+    border-radius: 5px
+    box-shadow: 0 0 15px #eee
+  .book-authors
+    font-size: 0.8em
