--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -65,6 +65,10 @@ strong
       background: pinkBg
       text-decoration: none !important
 
+    em
+      font-style: normal
+      border-bottom: solid 1px black
+
     .highlight
       border-radius: 5px
 
@@ -75,7 +79,7 @@ strong
         color: #999 !important
 
     .code
-      font-size: 0.92em
+      font-size: 0.95em
 
   // copyright
   .post-copyright
