add: render notebook

--- a/source/_data/post-body-end.njk
+++ b/source/_data/post-body-end.njk
@@ -27,3 +27,14 @@
 {%- if theme.pjax %}
   </div>
 {%- endif %}
+
+<script>
+  function resizeIframe() {
+    const obj = document.querySelector('.post-body iframe');
+    obj.onload = () => {
+      obj.style.height = obj.contentWindow.document.documentElement.scrollHeight + 'px';
+      obj.setAttribute('scrolling', 'no');
+    }
+  }
+  resizeIframe();
+</script>
