add: ga and disqus

--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -168,3 +168,6 @@ strong
     color: purple !important
     background: purpleBg !important
     text-decoration: none !important
+
+.post-copyright
+  font-size: 0.8em
