add: many posts

--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -83,6 +83,7 @@ strong
     figcaption
       font-weight: normal !important
       line-height: 1.2
+      text-align: left
       strong
         color: #999 !important
 
